feat: migrate frontend to Nuxt.js

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.nuxt/
+.output/
 
 # Typescript v1 declaration files
 typings/
@@ -63,3 +65,8 @@ typings/
 .idea/
 *.swp
 *.swo
+
+# OS / archives / legacy outputs
+.DS_Store
+dist/
+*.zip
