--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "otp-landing-page",
   "version": "1.0.0",
   "description": "OTP Landing Page with Signal Integration",
-  "main": "index.js",
   "private": true,
   "scripts": {
-    "clean": "node scripts/build.js --clean",
-    "build": "node scripts/build.js",
-    "start": "node server.js",
-    "dev": "node server.js",
-    "preview": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:secure": "node server.js",
-    "start:secure:5500": "PORT=5500 node server.js"
+    "clean": "rm -rf .output .nuxt dist",
+    "build": "nuxt build",
+    "start": "HOST=${HOST:-127.0.0.1} PORT=${PORT:-5500} node .output/server/index.mjs",
+    "dev": "HOST=${HOST:-127.0.0.1} PORT=${PORT:-5500} nuxt dev --host ${HOST:-127.0.0.1} --port ${PORT:-5500}",
+    "preview": "HOST=${HOST:-127.0.0.1} PORT=${PORT:-5500} nuxt preview",
+    "start:secure": "HOST=${HOST:-127.0.0.1} PORT=${PORT:-5500} node .output/server/index.mjs",
+    "start:secure:5500": "PORT=5500 HOST=${HOST:-127.0.0.1} node .output/server/index.mjs"
   },
   "keywords": [
     "otp",
@@ -21,7 +19,10 @@
   ],
   "author": "Signal OTP Team",
   "license": "MIT",
+  "imports": {
+    "#internal/nuxt/paths": "./internal/nuxt-paths.mjs"
+  },
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "nuxt": "^3.17.5"
   }
 }
